objects/Opp_Pipeline_Validation_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Fields__c</fullName>
        <label>Additional Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_By_Stage__c</fullName>
        <label>Locked By Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closing</fullName>
                    <default>true</default>
                    <label>Closing</label>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Funded Won</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                    <default>true</default>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Personal Credit Report</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Recorded Information</fullName>
                </value>
                <value>
                    <fullName>Requirement</fullName>
                </value>
                <value>
                    <fullName>Trade Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Populated_By_Stage__c</fullName>
        <label>Populated By Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Due Diligence</fullName>
                    <default>true</default>
                    <label>Investment Due Diligence</label>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Final Approval</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation__c</fullName>
        <label>Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opp Pipeline Validation Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Active__c</columns>
        <columns>Object__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Additional_Fields__c</columns>
        <columns>Populated_By_Stage__c</columns>
        <columns>Validation__c</columns>
        <columns>Conditions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Opp Pipeline Validation Fields</pluralLabel>
</CustomObject>